# flspo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  error.h  files.cpp  files.h  main.cpp  read.cpp  read.h  write.cpp  write.h
.github/workflows/: cmake.yml
